--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -14,6 +14,8 @@ services:
 
   db:
     image: mysql:5.7
+    ports:
+      - "3306:3306"
     environment:
       MYSQL_ROOT_PASSWORD: rootpassword
       MYSQL_DATABASE: forum
